Added finishing touches

--- a/resources.html
+++ b/resources.html
@@ -12,11 +12,11 @@
         <header>
             <h2>Ressursarkiv</h2>
         </header> 
-        <button id="button1" class="active">HTML</button>
-        <button id="css">CSS</button>
-        <button id="js">JavaScript</button>
-        <button id="react">React</button>
-        <button id="sanity">Sanity og Headless CMS</button>
+        <button id="html" class="active" onclick="HTML()">HTML</button>
+        <button id="css" onclick="CSS()">CSS</button>
+        <button id="js" onclick="JS()">JavaScript</button>
+        <button id="react" onclick="React()">React</button>
+        <button id="sanity" onclick="Sanity()">Sanity og Headless CMS</button>
         <section>
             <h2>Kategori 1</h2>
             <p>Lorem ipsum</p>
